src/objects/inscor__Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Condition_Code_Value__c</fullName>
        <description>To be used in invoice PDF</description>
        <formula>inscor__Condition_Code__r.Name</formula>
        <label>Condition Code Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Value__c</fullName>
        <description>To be used in the Invoice pdf</description>
        <formula>IF( NOT( ISBLANK(inscor__Inventory__r.inscor__Serial_Number__c ) ) , inscor__Inventory__r.inscor__Serial_Number__c, inscor__Inventory__r.inscor__Batch_LOT__c)</formula>
        <label>Serial Number Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Cost__c</fullName>
        <label>Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM</label>
        <referenceTo>inscor__BOM__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Acquisition_Cost__c</fullName>
        <formula>inscor__Release_Line__r.inscor__Company_Acquisition_Cost__c</formula>
        <label>Company Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Extended_Acquisition_Cost__c</fullName>
        <formula>inscor__Release_Line__r.inscor__Company_Extended_Acquisition_Cost__c</formula>
        <label>Company Extended Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Extended_Repair_Cost__c</fullName>
        <formula>inscor__Release_Line__r.inscor__Company_Extended_Repair_Cost__c</formula>
        <label>Company Extended Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Extended_Total_Cost__c</fullName>
        <formula>inscor__Company_Extended_Acquisition_Cost__c +  inscor__Company_Extended_Repair_Cost__c</formula>
        <label>Company Extended Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Leasing_Cost__c</fullName>
        <formula>inscor__Leasing_Cost__c / BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Leasing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Price__c</fullName>
        <formula>inscor__Release_Line__r.inscor__Company_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Repair_Cost__c</fullName>
        <formula>inscor__Release_Line__r.inscor__Company_Repair_Cost__c</formula>
        <label>Company Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Cost__c</fullName>
        <formula>inscor__Company_Acquisition_Cost__c +  inscor__Company_Repair_Cost__c</formula>
        <label>Company Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_WO_Cost__c</fullName>
        <label>Company WO Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Consignment_Status__c</fullName>
        <label>Consignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Consignor_Payable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignor Payable</label>
        <referenceTo>inscor__Consignor_Payable__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line</label>
        <referenceTo>inscor__Contract_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Core_Due__c</fullName>
        <label>Core Due (In Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost - RETIRED</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Acquisition_Cost__c</fullName>
        <formula>inscor__Acquisition_Cost__c * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Company_Price__c</fullName>
        <formula>inscor__Company_Price__c *  inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Price__c</fullName>
        <formula>inscor__Price__c *  inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Repair_Cost__c</fullName>
        <formula>inscor__Repair_Cost__c * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Total_Cost__c</fullName>
        <formula>inscor__Total_Cost__c * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Hours_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Billed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Paid__c</fullName>
        <label>Invoice Paid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>inscor__Invoice__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labor Entry</label>
        <referenceTo>inscor__Labor_Entry__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Line</label>
        <referenceTo>inscor__Lease_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Leasing_Cost__c</fullName>
        <label>Leasing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Lease Rate</fullName>
                </value>
                <value>
                    <fullName>Lease Overage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Margin_Percent__c</fullName>
        <formula>( inscor__Extended_Price__c - inscor__Extended_Total_Cost__c ) / inscor__Extended_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Margin__c</fullName>
        <formula>inscor__Extended_Price__c - inscor__Extended_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Company_Price__c</fullName>
        <formula>inscor__Sales_Order_Line__r.inscor__Outright_Company_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outright Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Price__c</fullName>
        <label>Outright Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Type__c</fullName>
        <formula>IF(inscor__Owner_Code__r.inscor__Lot_Purchase__c, &apos;Lot&apos;,  IF(inscor__Owner_Code__r.inscor__Consignment__c , &apos;Consignment&apos;, &apos;Spec&apos;))</formula>
        <label>Part Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Billed</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Line</label>
        <referenceTo>inscor__RMA_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Cost__c</fullName>
        <label>Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Order_Type__c</fullName>
        <label>SO Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost__c</fullName>
        <formula>inscor__Acquisition_Cost__c  + inscor__Repair_Cost__c +  inscor__WO_Cost__c + inscor__Leasing_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Cost__c</fullName>
        <label>WO Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Material</label>
        <referenceTo>inscor__Work_Order_Material__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Task Skill</label>
        <referenceTo>inscor__Work_Order_Task_Skill__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>ILID-{0}</displayFormat>
        <label>Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Cancelled_Payble_Not_Allowed</fullName>
        <active>true</active>
        <description>When a consignor payable is in cancelled status, block additional sales or adjustments from being added to it.</description>
        <errorConditionFormula>ISCHANGED( inscor__Consignor_Payable__c ) &amp;&amp;   ISPICKVAL(inscor__Consignor_Payable__r.inscor__Status__c , &apos;Cancelled&apos;)</errorConditionFormula>
        <errorMessage>Can not add additional Sales to Cancelled Payable.</errorMessage>
    </validationRules>
</CustomObject>